# static-file-server

./: Cargo.toml  README.md
src/: main.rs
