[package]
name = "static-file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
mime_guess = "2.0"
chrono = "0.4"
clap = "4.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3", features = ["fs"] }

[bin]
name = "sfs"
path = "src/main.rs"
